<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/stockBg"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_25sdp"
    android:background="@color/grey_200">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:visibility="gone"
        android:id="@+id/headerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/headLblViews"
            android:layout_width="0dp"
            android:layout_height="@dimen/_28sdp"
            android:background="@color/grey_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/industryLbl"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_6sdp"
            android:fontFamily="@font/segoe_ui"
            android:gravity="end"
            android:text="@string/industry_lbl"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/headLblViews"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/headLblViews" />

        <TextView
            android:id="@+id/lastLbl"
            android:layout_width="@dimen/_45sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segoe_ui"
            android:gravity="end"
            android:text="@string/last"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/headLblViews"
            app:layout_constraintStart_toEndOf="@id/industryLbl"
            app:layout_constraintTop_toTopOf="@id/headLblViews" />

        <TextView
            android:id="@+id/openLbl"
            android:layout_width="@dimen/_45sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segoe_ui"
            android:gravity="end"
            android:text="@string/open_lbl"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/headLblViews"
            app:layout_constraintStart_toEndOf="@+id/lastLbl"
            app:layout_constraintTop_toTopOf="@id/headLblViews" />

        <TextView
            android:id="@+id/highLbl"
            android:layout_width="@dimen/_45sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segoe_ui"
            android:gravity="end"
            android:text="@string/high_lbl"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/headLblViews"
            app:layout_constraintStart_toEndOf="@+id/openLbl"
            app:layout_constraintTop_toTopOf="@id/headLblViews" />

        <TextView
            android:id="@+id/lowLbl"
            android:layout_width="@dimen/_45sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segoe_ui"
            android:gravity="end"
            android:text="@string/low_lbl"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/headLblViews"
            app:layout_constraintStart_toEndOf="@+id/highLbl"
            app:layout_constraintTop_toTopOf="@id/headLblViews" />

        <TextView
            android:id="@+id/closeLbl"
            android:layout_width="@dimen/_45sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segoe_ui"
            android:gravity="end"
            android:text="@string/close_lbl"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/industryLbl"
            app:layout_constraintStart_toEndOf="@+id/lowLbl"
            app:layout_constraintTop_toTopOf="@id/industryLbl" />

        <TextView
            android:id="@+id/changeLbl"
            android:layout_width="@dimen/_45sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segoe_ui"
            android:gravity="end"
            android:text="@string/change_lbl"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/industryLbl"
            app:layout_constraintStart_toEndOf="@+id/closeLbl"
            app:layout_constraintTop_toTopOf="@id/industryLbl" />


        <TextView
            android:id="@+id/changePercentLbl"
            android:layout_width="@dimen/_55sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segoe_ui"
            android:gravity="end"
            android:text="@string/change_per_lbl"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/industryLbl"
            app:layout_constraintStart_toEndOf="@+id/changeLbl"
            app:layout_constraintTop_toTopOf="@id/industryLbl" />

        <TextView
            android:id="@+id/volumeLbl"
            android:layout_width="@dimen/_45sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segoe_ui"
            android:gravity="end"
            android:text="@string/volume_lbl"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/industryLbl"
            app:layout_constraintStart_toEndOf="@+id/changePercentLbl"
            app:layout_constraintTop_toTopOf="@id/industryLbl" />

        <TextView
            android:id="@+id/dateLbl"
            android:layout_width="@dimen/_75sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segoe_ui"
            android:gravity="center"
            android:text="@string/date_lbl"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/industryLbl"
            app:layout_constraintStart_toEndOf="@+id/volumeLbl"
            app:layout_constraintTop_toTopOf="@id/industryLbl"
            app:layout_constraintVertical_bias="0.473" />

        <TextView
            android:id="@+id/exchangeLbl"
            android:layout_width="@dimen/_75sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segoe_ui"
            android:gravity="start"
            android:paddingEnd="@dimen/_5sdp"
            android:text="@string/exchange_lbl"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/industryLbl"
            app:layout_constraintStart_toEndOf="@+id/dateLbl"
            app:layout_constraintTop_toTopOf="@id/industryLbl"
            tools:ignore="RtlSymmetry" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/industry"
        android:layout_width="@dimen/_65sdp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/segoe_ui"
        android:gravity="center|end"
        android:text="-"
        android:paddingStart="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_6sdp"
        android:paddingEnd="@dimen/_3sdp"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/last"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerView" />

    <TextView
        android:id="@+id/last"
        android:layout_width="@dimen/_45sdp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/segoe_ui"
        android:gravity="end|center_vertical"
        android:text="30.75"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@id/industry"
        app:layout_constraintEnd_toStartOf="@id/open"
        app:layout_constraintStart_toEndOf="@id/industry"
        app:layout_constraintTop_toTopOf="@id/industry" />

    <TextView
        android:id="@+id/open"
        android:layout_width="@dimen/_45sdp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/segoe_ui"
        android:gravity="end"
        android:text="30.0"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@id/industry"
        app:layout_constraintEnd_toStartOf="@id/high"
        app:layout_constraintStart_toEndOf="@+id/last"
        app:layout_constraintTop_toTopOf="@id/industry" />

    <TextView
        android:id="@+id/high"
        android:layout_width="@dimen/_45sdp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/segoe_ui"
        android:gravity="end"
        android:text="30.9"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@id/industry"
        app:layout_constraintEnd_toStartOf="@id/low"
        app:layout_constraintStart_toEndOf="@+id/open"
        app:layout_constraintTop_toTopOf="@id/industry" />

    <TextView
        android:id="@+id/low"
        android:layout_width="@dimen/_45sdp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/segoe_ui"
        android:gravity="end"
        android:text="29.8"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@id/industry"
        app:layout_constraintStart_toEndOf="@+id/high"
        app:layout_constraintTop_toTopOf="@id/industry" />

    <TextView
        android:id="@+id/close"
        android:layout_width="@dimen/_45sdp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/segoe_ui"
        android:gravity="end"
        android:text="29.8"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@id/industry"
        app:layout_constraintStart_toEndOf="@+id/low"
        app:layout_constraintTop_toTopOf="@id/industry" />

    <TextView
        android:id="@+id/change"
        android:layout_width="@dimen/_55sdp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/segoe_ui"
        android:gravity="end"
        android:text="29.8"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@id/industry"
        app:layout_constraintStart_toEndOf="@+id/close"
        app:layout_constraintTop_toTopOf="@id/industry" />

    <TextView
        android:id="@+id/changePercent"
        android:layout_width="@dimen/_75sdp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/segoe_ui"
        android:gravity="end"
        android:text="29.8"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@id/industry"
        app:layout_constraintStart_toEndOf="@+id/change"
        app:layout_constraintTop_toTopOf="@id/industry" />

    <TextView
        android:id="@+id/volume"
        android:layout_width="@dimen/_55sdp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/segoe_ui"
        android:gravity="end"
        android:text="29.8"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@id/industry"
        app:layout_constraintStart_toEndOf="@+id/changePercent"
        app:layout_constraintTop_toTopOf="@id/industry" />

    <TextView
        android:id="@+id/date"
        android:layout_width="@dimen/_85sdp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/segoe_ui"
        android:gravity="center"
        android:text="10-10-2022"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@id/industry"
        app:layout_constraintStart_toEndOf="@+id/volume"
        app:layout_constraintTop_toTopOf="@id/industry" />

    <TextView
        android:id="@+id/exchange"
        android:layout_width="@dimen/_110sdp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/segoe_ui"
        android:gravity="start"
        android:text="Saudi stock exchange"
        android:textColor="@color/black"
        android:textSize="10sp"
        android:paddingEnd="@dimen/_5sdp"
        app:layout_constraintBottom_toBottomOf="@id/industry"
        app:layout_constraintStart_toEndOf="@+id/date"
        app:layout_constraintTop_toTopOf="@id/industry" />

</androidx.constraintlayout.widget.ConstraintLayout>